# TTFViewer

./: CMakeLists.txt  README.md
include/: encodings.h  util.h
include/ttf/: file.h  render.h  ttf.h
include/ttf/tables/: cmap.h  glyf.h  head.h  hhea.h  hmtx.h  loca.h  maxp.h  name.h
include/ttf/tables/cmap/: cmap0.h  cmap10.h  cmap12.h  cmap13.h  cmap14.h  cmap2.h  cmap4.h  cmap6.h  cmap8.h
source/: encodings.c  main.c  util.c
source/ttf/: file.c  render.c  ttf.c
source/ttf/tables/: cmap.c  glyf.c  head.c  hhea.c  hmtx.c  loca.c  maxp.c  name.c
source/ttf/tables/cmap/: cmap0.c  cmap10.c  cmap12.c  cmap13.c  cmap14.c  cmap2.c  cmap4.c  cmap6.c  cmap8.c
